--- a/src/styles/common-variables.scss
+++ b/src/styles/common-variables.scss
@@ -1,5 +1,2 @@
-// 导入 element-ui 的默认样式变量
-@import 'element-plus/theme-chalk/src/common/var.scss';
-
 // 字体颜色
-$font-color: $text-color;
+$font-color: #666;
